--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#about" data-target="#about"><span></span></a>
+          <a class="nav-link " href="/#about" data-target="#about"><span>About</span></a>
         </li>
 
         
