--- a/courses/example/index.html
+++ b/courses/example/index.html
@@ -456,7 +456,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#about"><span>About</span></a>
+          <a class="nav-link " href="/#about"><span></span></a>
         </li>
 
         
