--- a/publication/2020_hierarchies/index.html
+++ b/publication/2020_hierarchies/index.html
@@ -928,7 +928,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://elisendaortiz.github.io/">Elisenda Ortiz</a></h5>
-      <h6 class="card-subtitle">Pre-doctoral researcher</h6>
+      <h6 class="card-subtitle">Researcher &ndash; PhD in Physics</h6>
       
       <ul class="network-icon" aria-hidden="true">
   
